<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_equipment">

    <fragment
        android:id="@+id/navigation_equipment"
        android:name="com.example.catdigital_yardclub.ui.equipment.RequestEquipmentFragment"
        android:label="@string/title_request_equipment"
        tools:layout="@layout/fragment_equipment" />

    <fragment
        android:id="@+id/navigation_rental"
        android:name="com.example.catdigital_yardclub.ui.activerental.ActiveRentalFragment"
        android:label="@string/title_active_rental"
        tools:layout="@layout/fragment_active_rental" />

    <fragment
        android:id="@+id/navigation_requests"
        android:name="com.example.catdigital_yardclub.ui.openrequests.OpenRequestsFragment"
        android:label="@string/title_open_requests"
        tools:layout="@layout/fragment_open_request" />

    <fragment
        android:id="@+id/navigation_yard"
        android:name="com.example.catdigital_yardclub.ui.yard.YardFragment"
        android:label="@string/title_yard"
        tools:layout="@layout/fragment_yard" />
</navigation>