<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/resultCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin_half"
        android:layout_marginStart="@dimen/activity_margin_content"
        android:layout_marginEnd="@dimen/activity_margin_content"
        android:layout_marginBottom="@dimen/activity_margin_half"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/resultName"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin_content"
            android:layout_marginTop="@dimen/activity_margin_quarter"
            android:layout_marginBottom="@dimen/activity_margin_half"
            android:text="@string/display_name" />

        <TextView
            android:id="@+id/resultDesc"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin_content"
            android:layout_marginTop="@dimen/activity_margin_quarter"
            android:text="@string/description_details" />

            <TextView
                android:id="@+id/monthlyPrice"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin_content"
                android:layout_marginTop="@dimen/activity_margin_quarter"
                android:text="@string/monthly_price" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
