<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/base_grey"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/featured_equipment"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/mainImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_featured" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/base_grey"
                android:paddingStart="@dimen/paddingStart_dimen"
                android:paddingTop="@dimen/padding_dimen"
                android:paddingBottom="@dimen/padding_dimen"
                android:text="@string/choose_rental_store"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/rentalSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_top"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_logo_cat" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start"
                        android:paddingTop="@dimen/padding_dimen"
                        android:paddingBottom="@dimen/paddingStart_dimen"
                        android:text="@string/rental_store"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start"
                        android:orientation="horizontal">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_check" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/paddingStart_dimen"
                            android:paddingTop="@dimen/paddingStart_dimen"
                            android:paddingBottom="@dimen/padding_dimen"
                            android:text="@string/rental_subtext1"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start"
                        android:orientation="horizontal">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_check" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/paddingStart_dimen"
                            android:paddingTop="@dimen/paddingStart_dimen"
                            android:paddingBottom="@dimen/padding_dimen"
                            android:text="@string/rental_subtext2"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start"
                        android:orientation="horizontal">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_check" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/paddingStart_dimen"
                            android:paddingTop="@dimen/paddingStart_dimen"
                            android:paddingBottom="@dimen/padding_dimen"
                            android:text="@string/rental_subtext3"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <View
                style="@style/divider"
                android:layout_marginTop="@dimen/margin_top" />

            <LinearLayout
                android:id="@+id/contractor_owned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="145dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_top"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_logo_cat_digital" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start"
                        android:paddingTop="@dimen/padding_dimen"
                        android:paddingBottom="@dimen/paddingStart_dimen"
                        android:text="@string/contractor_owned"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start"
                        android:orientation="horizontal">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_check" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/paddingStart_dimen"
                            android:paddingTop="@dimen/paddingStart_dimen"
                            android:paddingBottom="@dimen/padding_dimen"
                            android:text="@string/contract_subtext1"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start"
                        android:orientation="horizontal">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_check" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/paddingStart_dimen"
                            android:paddingTop="@dimen/paddingStart_dimen"
                            android:paddingBottom="@dimen/padding_dimen"
                            android:text="@string/contract_subtext2"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start"
                        android:orientation="horizontal">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_check" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/paddingStart_dimen"
                            android:paddingTop="@dimen/paddingStart_dimen"
                            android:paddingBottom="@dimen/padding_dimen"
                            android:text="@string/contract_subtext3"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>